--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@
   --black: #121212;
   --gray: #e8e8e8;
   --blue: #4386bf;
-
 }
 
 nav,
@@ -45,7 +44,7 @@ h1 {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  margin-bottom: 1rem;
+  margin-bottom: 2.5rem;
 }
 
 .book {
@@ -69,4 +68,55 @@ h1 {
 
 .buttons {
   margin-top: 1.31rem;
+}
+
+/* form */
+.add {
+  border-top: 1px solid #e8e8e8;
+  padding: 1.8rem 0;
+}
+
+.add h3 {
+  margin: 1.813rem 0;
+  color: #888;
+  font-weight: bold;
+  letter-spacing: -0.18px;
+}
+
+.add fieldset {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+  justify-content: space-between;
+}
+
+.add input {
+  padding: 0.813rem 1.063rem;
+  border: 1px solid var(--grey);
+  background-color: #fff;
+  max-width: 41.5rem;
+  flex: 1;
+}
+
+.add input::placeholder {
+  color: #c4c4c4;
+  letter-spacing: -0.15px;
+  font-size: 1rem;
+}
+
+.add button {
+  padding: 0.801rem 1.188rem 0.886rem 1.375rem;
+  border-radius: 3px;
+  background-color: var(--azure);
+  width: 11.5rem;
+  height: 2.813rem;
+  color: #fff;
+  letter-spacing: 0.5px;
+  text-align: center;
+  font-size: 0.813rem;
+  font-weight: bold;
+}
+
+.add button:hover {
+  background-color: #0286ea;
 }
