--- a/src/App.css
+++ b/src/App.css
@@ -122,7 +122,8 @@ h1 {
   font-size: 1rem;
 }
 
-.add button {
+.add button,
+.check-status {
   padding: 0.801rem 1.188rem 0.886rem 1.375rem;
   border-radius: 3px;
   background-color: var(--azure);
