--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,20 @@ h1 {
   opacity: 1;
 }
 
+.login {
+  border: 0.1px solid #dcd7d7;
+  border-radius: 50%;
+  padding: 0.875rem;
+  width: 16px;
+  height: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--azure);
+  margin-left: auto;
+  cursor: pointer
+}
+
 /* booklist */
 .book-list {
   display: flex;
@@ -85,7 +99,7 @@ h1 {
 }
 
 .author,
-.remove-btn {
+.buttons button {
   font-family: 'Roboto', sans-serif;
   font-size: 0.875rem;
   font-weight: 300;
@@ -94,6 +108,20 @@ h1 {
 
 .buttons {
   margin-top: 1.31rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  height: 1.6rem;
+}
+
+.buttons button:hover {
+  font-weight: bold;
+}
+
+.remove {
+  border-right: 1px solid var(--gray);
+  border-left: 1px solid var(--gray);
+  padding: 0 1rem;
 }
 
 .complete {
@@ -105,7 +133,7 @@ h1 {
 .complete::before {
   display: inherit;
   content: "";
-  height: 60%;
+  height: 100px;
   max-height: 4.12rem;
   width: 0.125rem;
   background-color: var(--gray);
