--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@ h1 {
   justify-content: center;
   color: var(--azure);
   margin-left: auto;
-  cursor: pointer
+  cursor: pointer;
 }
 
 /* booklist */
@@ -112,10 +112,6 @@ h1 {
   flex-wrap: wrap;
   gap: 1rem;
   height: 1.6rem;
-}
-
-.buttons button:hover {
-  font-weight: bold;
 }
 
 .remove {
@@ -240,4 +236,8 @@ h1 {
 
 .update-btn:hover {
   font-weight: 300;
+}
+
+.buttons button:hover {
+  font-weight: bold;
 }
